--- a/client/Recipe.css
+++ b/client/Recipe.css
@@ -1,23 +1,29 @@
+
 .recipe_container {
-    width: 15rem;
-    border-radius: 1rem;
+    width: 12rem;
+    border-radius: 0.5rem;
     box-shadow: 0px 10px 8px #999;
     display: flex;
     flex-direction: column;
-    margin: 0.5rem;
+    margin: 1rem;
     background-color: white;
-    justify-content: space-between;
-
+    justify-content: space-around;
 }
 
 .recipe-img {
-    width: 100%;
-    border-radius: 1rem  1rem 0 0;
+    float: left;
+    width:  12rem;
+    height: 12rem;
+    object-fit: cover;
+    border-radius: 0.5rem  0.5rem 0 0;
+    margin-bottom: 1rem;
 }
 
 .recipe-title,
 .recipe-description {
     margin: 0.5rem 5%;
+    font-size: 0.6rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 div {
     display: inline;
@@ -28,8 +34,8 @@ body {
     background-color: #ffd700;
 }
 
-.btnDELETE, .btnUPDATE {
-    color: #06006b;
+ .btnDELETE, .btnUPDATE {
+    color: #0078d0;
     background-color: #eeeeee;
     border-color: #eeeeee;
     width: 66px;
@@ -37,4 +43,22 @@ body {
     border-radius: 0.3rem;
     padding: auto;
     font-weight: lighter;
+}
+.btnDELETE {
+    color: rgb(247, 78, 78);
+}
+.button_container{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+.label {
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-left: 5%;
+    margin-bottom: 0;
+}
+
+.recipe-title {
+    font-size: 1rem;
 }
