--- a/client/Recipes.css
+++ b/client/Recipes.css
@@ -1,9 +1,48 @@
-.recipeCollection {
 
-    display: flex;
-    flex-direction: row;
-
-}
 h2 {
     color:#4b0082;
+    font-style: italic;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+.recipeCollection {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    border: 1px;
+}
+.btnNew {
+  align-items: center;
+  appearance: none;
+  background-color: #3EB2FD;
+  background-image: linear-gradient(1deg, #4F58FD, #149BF3 99%);
+  background-size: calc(100% + 20px) calc(100% + 20px);
+  border-radius: 100px;
+  border-width: 0;
+  box-shadow: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: CircularStd,sans-serif;
+  font-size: 0.8rem;
+  height: auto;
+  justify-content: center;
+  line-height: 1.5;
+  padding: 4px 15px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color .2s,background-position .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+}
+
+.btnNew:hover {
+  background-position: -20px -20px;
+}
+
+.button-21:focus:not(:active) {
+  box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 .125em;
 }
