--- a/client/Recipes.css
+++ b/client/Recipes.css
@@ -1,8 +1,8 @@
 
-h2 {
-    color:#4b0082;
+.webHeading {
+    color: #000080;
     font-style: italic;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .recipeCollection {
     display: grid;
@@ -12,7 +12,7 @@ h2 {
 .btnNew {
   align-items: center;
   appearance: none;
-  background-color: #3EB2FD;
+  background-color: #3e91fd;
   background-image: linear-gradient(1deg, #4F58FD, #149BF3 99%);
   background-size: calc(100% + 20px) calc(100% + 20px);
   border-radius: 100px;
@@ -23,11 +23,11 @@ h2 {
   cursor: pointer;
   display: inline-flex;
   font-family: CircularStd,sans-serif;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   height: auto;
   justify-content: center;
   line-height: 1.5;
-  padding: 4px 15px;
+  padding: 3px 12px;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -43,6 +43,6 @@ h2 {
   background-position: -20px -20px;
 }
 
-.button-21:focus:not(:active) {
+.buttonNew:focus:not(:active) {
   box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 .125em;
 }
